[gd_scene load_steps=20 format=3 uid="uid://d2xdtano7t7xb"]

[ext_resource type="FontFile" uid="uid://bgt0wktokjwnl" path="res://assets/VT323-Regular.ttf" id="1_0iihq"]
[ext_resource type="Script" path="res://score.gd" id="1_66yog"]
[ext_resource type="Texture2D" uid="uid://x8f1863tl04s" path="res://assets/play.png" id="2_bfdqy"]
[ext_resource type="Texture2D" uid="uid://cekaat430s03d" path="res://assets/settings.png" id="3_n24qx"]
[ext_resource type="PackedScene" uid="uid://by63xypgmdorg" path="res://logic/custom_text.tscn" id="3_t4al8"]
[ext_resource type="AudioStream" uid="uid://cgmidlr0psbbw" path="res://assets/denied.wav" id="4_fidr8"]
[ext_resource type="Texture2D" uid="uid://cvb0xnpb5e30s" path="res://assets/exit.png" id="4_ijtnc"]
[ext_resource type="PackedScene" uid="uid://b2cgwyo06yfwn" path="res://leaderboard_ui.tscn" id="7_lba4x"]

[sub_resource type="Theme" id="Theme_jatff"]
default_font = ExtResource("1_0iihq")
default_font_size = 128

[sub_resource type="Theme" id="Theme_k3nlm"]
default_font = ExtResource("1_0iihq")
default_font_size = 24

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iqimc"]
texture = ExtResource("2_bfdqy")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4mlar"]
texture = ExtResource("2_bfdqy")
modulate_color = Color(0.462291, 0.462291, 0.46229, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e4ret"]
texture = ExtResource("2_bfdqy")
modulate_color = Color(0.821789, 0.821789, 0.821788, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wug6k"]
texture = ExtResource("3_n24qx")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q7wf6"]
texture = ExtResource("3_n24qx")
modulate_color = Color(0.462291, 0.462291, 0.46229, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_b0a3m"]
texture = ExtResource("3_n24qx")
modulate_color = Color(0.821789, 0.821789, 0.821788, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2eemy"]
texture = ExtResource("4_ijtnc")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_388db"]
texture = ExtResource("4_ijtnc")
modulate_color = Color(0.462291, 0.462291, 0.46229, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2ja8m"]
texture = ExtResource("4_ijtnc")
modulate_color = Color(0.821789, 0.821789, 0.821788, 1)

[node name="Score" type="Node2D"]
script = ExtResource("1_66yog")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0823529, 0.0823529, 0.0823529, 1)

[node name="HB" type="HBoxContainer" parent="Background"]
layout_mode = 0
offset_right = 1752.0
offset_bottom = 646.0

[node name="GameOver" type="Control" parent="Background/HB"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Heading" type="RichTextLabel" parent="Background/HB/GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -314.5
offset_top = -253.0
offset_right = 314.5
offset_bottom = 87.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_jatff")
bbcode_enabled = true
text = "[center][color=gray][wave]Game over[/wave]
[font_size=96]
Score:"

[node name="Score" type="RichTextLabel" parent="Background/HB/GameOver"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -314.5
offset_top = -251.0
offset_right = 314.5
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_jatff")
bbcode_enabled = true
text = "[center][rainbow freq=.2 sat=0.4]00069"

[node name="Highscore" type="RichTextLabel" parent="Background/HB/GameOver"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -313.0
offset_top = -54.0
offset_right = -13.0
offset_bottom = -3.0
grow_horizontal = 0
grow_vertical = 0
theme = SubResource("Theme_jatff")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[right][color=gray]Best: "
scroll_active = false

[node name="Leaderboard" parent="Background/HB" instance=ExtResource("7_lba4x")]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2

[node name="ScoreTextGame" parent="Background" instance=ExtResource("3_t4al8")]
modulate = Color(1, 1, 1, 0.0313726)

[node name="ButtonBackground" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -55.0
offset_right = 143.0
offset_bottom = -8.0
grow_vertical = 0
color = Color(0, 0, 0, 0)

[node name="Buttons" type="HBoxContainer" parent="Background/ButtonBackground"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="Retry" type="Button" parent="Background/ButtonBackground/Buttons"]
modulate = Color(0.498039, 1, 0.831373, 1)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Retry"
theme = SubResource("Theme_k3nlm")
theme_override_styles/hover = SubResource("StyleBoxTexture_iqimc")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4mlar")
theme_override_styles/normal = SubResource("StyleBoxTexture_e4ret")

[node name="Settings" type="Button" parent="Background/ButtonBackground/Buttons"]
modulate = Color(0.792157, 0.8, 0.478431, 1)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Secret"
theme = SubResource("Theme_k3nlm")
theme_override_styles/hover = SubResource("StyleBoxTexture_wug6k")
theme_override_styles/pressed = SubResource("StyleBoxTexture_q7wf6")
theme_override_styles/normal = SubResource("StyleBoxTexture_b0a3m")

[node name="Quit" type="Button" parent="Background/ButtonBackground/Buttons"]
modulate = Color(0.8, 0.478431, 0.556863, 1)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Quit"
theme = SubResource("Theme_k3nlm")
theme_override_styles/hover = SubResource("StyleBoxTexture_2eemy")
theme_override_styles/pressed = SubResource("StyleBoxTexture_388db")
theme_override_styles/normal = SubResource("StyleBoxTexture_2ja8m")

[node name="Denied" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_fidr8")

[connection signal="toggle_show" from="Background/HB/Leaderboard" to="." method="_on_leaderboard_toggle_show"]
[connection signal="pressed" from="Background/ButtonBackground/Buttons/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="Background/ButtonBackground/Buttons/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Background/ButtonBackground/Buttons/Quit" to="." method="_on_quit_pressed"]
